--- a/UI/Test/EgfrToAlkReflexPage.xaml
+++ b/UI/Test/EgfrToAlkReflexPage.xaml
@@ -1,11 +1,9 @@
-<UserControl x:Class="YellowstonePathology.UI.Test.EGFRToALKReflexPage"
+<Test:ResultControl x:Class="YellowstonePathology.UI.Test.EGFRToALKReflexPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:Test="clr-namespace:YellowstonePathology.UI.Test"
-             mc:Ignorable="d" 
-             d:DesignWidth="600">
+             xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
     <UserControl.Resources>
         <Test:EGFRToALKReflexAnalysisStatusColorConverter x:Key="EGFRToALKReflexAnalysisStatusColorConverter"/>
     </UserControl.Resources>
@@ -61,7 +59,7 @@
                     <Hyperlink Click="HyperLinkAcceptResults_Click" FontSize="14">Accept Results</Hyperlink>
 			</TextBlock>
 
-			<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
+            <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
                 <Hyperlink Click="HyperLinkShowDocument_Click" FontSize="14">Show Document</Hyperlink>
             </TextBlock>
 
@@ -73,7 +71,7 @@
                     <Hyperlink Click="HyperLinkUnacceptResults_Click" FontSize="14">Unaccept Results</Hyperlink>
 			</TextBlock>
 
-			<TextBlock Grid.Column="0" Grid.Row="11" Margin="5,3,0,0">                    
+            <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="11" Margin="5,3,0,0">                    
 				<Hyperlink Click="HyperLinkUnfinalResults_Click" FontSize="14">Unfinalize Results</Hyperlink>
 			</TextBlock>
 
@@ -341,9 +339,9 @@
 			
 		</ScrollViewer>
 
-		<Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}" Margin="0,0,0,0"></Border>        
-        <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
-        <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonFinish_Click" Width="100" Height="40" HorizontalAlignment="Right">Finish</Button>        		
+		<Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}" Margin="0,0,0,0"></Border>
+        <Button Name="ButtonBack" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
+        <Button Name="ButtonFinish" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonFinish_Click" Width="100" Height="40" HorizontalAlignment="Right">Finish</Button>        		
 
 	</Grid>
-</UserControl>
+</Test:ResultControl>
