--- a/UI/Test/ALKForNSCLCByFISHResultPage.xaml
+++ b/UI/Test/ALKForNSCLCByFISHResultPage.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl
+﻿<Test:ResultControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib" 
     x:Class="YellowstonePathology.UI.Test.ALKForNSCLCByFISHResultPage"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:YellowstonePathology.UI.Test"            
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -55,13 +56,12 @@
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0" FontSize="14">                    
+                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="6" Margin="5,3,0,0" FontSize="14">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 				</TextBlock>
+                
 				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,5" FontSize="14">
-					<Hyperlink Click="HyperLinkFinalizeResults_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
+					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
 				</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0" FontSize="14">                    
@@ -72,7 +72,7 @@
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="11" Margin="5,3,0,0" FontSize="14">                    
+                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="11" Margin="5,3,0,0" FontSize="14">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize Results</Hyperlink>
 				</TextBlock>
 
@@ -140,8 +140,8 @@
 
         </Grid>
 
-        <Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>        
-        <Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
+        <Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
+        <Button Name="ButtonNext" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
         
     </Grid>
-</UserControl>
+</Test:ResultControl>
