--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -85,7 +85,8 @@
 				<MenuItem Name="MenuItemRuleBrowser" Header="Rule Browser" Click="MenuItemRuleBrowser_Click"></MenuItem>                
                 <MenuItem Name="MenuItemValidationTesting" Header="Validation Testing" Click="MenuItemValidationTesting_Click"></MenuItem>
                 <MenuItem Name="MenuItemMongoMigration" Header="Mongo Migration" Click="MenuItemMongoMigration_Click"></MenuItem>
-            </MenuItem>
+                <MenuItem Name="MenuItemNetMQTesting" Header="NetMQ Testing" Click="MenuItemNetMQ_Click"></MenuItem>
+                </MenuItem>
 
             <MenuItem Header="_Monitor" Name="MenuItemMonitor">
                 <MenuItem Name="MenuItemMonitorReportDistribution" Header="Report Distribution" Click="MenuItemShowReportDistributionMonitor_Click"></MenuItem>
