--- a/UI/Test/HPVResultPage.xaml
+++ b/UI/Test/HPVResultPage.xaml
@@ -44,30 +44,25 @@
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
-				
+
                 <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
-					<Hyperlink Click="HyperLinkFinalize_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
-				</TextBlock>
                 
-                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
+					<Hyperlink Click="HyperLinkFinalize_Click">Finalize</Hyperlink>
+				</TextBlock>
+
+                <TextBlock Name="TextBlockNext" Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
                     <Hyperlink Click="ButtonNext_Click">Next</Hyperlink>
                 </TextBlock>
                 
-                                <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkUnacceptResults_Click">
-						<TextBlock Text="Unaccept Results" />
-					</Hyperlink>
+                <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkUnfinalResults_Click">
-						<TextBlock Text="Unfinalize Results" />
-					</Hyperlink>
+                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize Results</Hyperlink>
 				</TextBlock>
 
 			</Grid>
