--- a/UI/Test/ROS1ResultPage.xaml
+++ b/UI/Test/ROS1ResultPage.xaml
@@ -59,9 +59,7 @@
 				</TextBlock>
                 
 				<TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkFinalizeResults_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
+					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
 				</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
