--- a/UI/Test/EgfrResultPage.xaml
+++ b/UI/Test/EgfrResultPage.xaml
@@ -52,21 +52,27 @@
 				</Grid.RowDefinitions>                
                 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
+                
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkPositiveL858R_Click">Positive L858R</Hyperlink>
                 </TextBlock>
+                
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkPositiveExon19_Click">Positive Exon 19</Hyperlink>
                 </TextBlock>
+                
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkPositiveE709X_Click">Positive E709X</Hyperlink>
                 </TextBlock>
+                
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkPositiveG719X_Click">Positive G719X</Hyperlink>
-                </TextBlock>                
+                </TextBlock>
+                
                 <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkPositiveS768I_Click">Positive S768I</Hyperlink>
                 </TextBlock>
+                
                 <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkPositiveL861Q_Click">Positive L861Q</Hyperlink>
                 </TextBlock>
@@ -74,6 +80,7 @@
                 <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkResistantT790M_Click">Resistant T790M</Hyperlink>
                 </TextBlock>
+                
                 <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkResistantExon20_Click">Resistant Exon 20</Hyperlink>
                 </TextBlock>
@@ -94,9 +101,7 @@
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 				</TextBlock>
 				<TextBlock Grid.Column="0" Grid.Row="14" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkFinalizeResults_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
+					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
 				</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="16" Margin="5,3,0,0">                    
