--- a/UI/Test/FNAResultPage.xaml
+++ b/UI/Test/FNAResultPage.xaml
@@ -43,9 +43,7 @@
 				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
-					<Hyperlink Click="HyperLinkFinalize_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
+					<Hyperlink Click="HyperLinkFinalize_Click">Finalize</Hyperlink>
 				</TextBlock>
 
                 <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
