--- a/UI/Test/HPV1618ByPCRResultPage.xaml
+++ b/UI/Test/HPV1618ByPCRResultPage.xaml
@@ -77,9 +77,7 @@
 				</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkFinalize_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
+					<Hyperlink Click="HyperLinkFinalize_Click">Finalize</Hyperlink>
 				</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="12" Margin="5,3,0,0">                    
