--- a/UI/Test/HighGradeLargeBCellLymphomaResultPage.xaml
+++ b/UI/Test/HighGradeLargeBCellLymphomaResultPage.xaml
@@ -42,9 +42,11 @@
 				</Grid.RowDefinitions>
 
 				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
+                
 				<TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkNegative_Click">Negative</Hyperlink>
 				</TextBlock>
+                
 				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkPositive_Click">Positive</Hyperlink>
 				</TextBlock>
@@ -58,9 +60,7 @@
 				</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkFinalizeResults_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
+					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
 				</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
