--- a/UI/Test/JAK2V617FResultPage.xaml
+++ b/UI/Test/JAK2V617FResultPage.xaml
@@ -55,9 +55,7 @@
 				</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkFinalize_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
+					<Hyperlink Click="HyperLinkFinalize_Click">Finalize</Hyperlink>
 				</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
