--- a/UI/Test/RASRAFPanelResultPage.xaml
+++ b/UI/Test/RASRAFPanelResultPage.xaml
@@ -56,9 +56,7 @@
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkFinalizeResults_Click">
-						<TextBlock Text="Finalize" />
-					</Hyperlink>
+					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
 				</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
