--- a/UI/TestWindow.xaml
+++ b/UI/TestWindow.xaml
@@ -12,9 +12,10 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>                       
-        
-        <Button Grid.Column="1" Grid.Row="0" Height="30" Width="100" Click="Button_Click">Go</Button>
+        </Grid.RowDefinitions>
+
+        <Button Grid.Column="1" Grid.Row="0" Height="30" Width="100" Click="Button_SubscribeClick" Margin="5,5,5,5">Subscribe</Button>
+        <Button Grid.Column="1" Grid.Row="1" Height="30" Width="100" Click="Button_PublishClick" Margin="5,5,5,5">Publish</Button>
         
     </Grid>
 </Window>
