--- a/YellowstonePathology/UI/AppMessaging/LockRequestPage.xaml
+++ b/YellowstonePathology/UI/AppMessaging/LockRequestPage.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         
-        <Button Grid.Column="0" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonAskToTakeCase_Click" Margin="5,5,5,5" Content="{Binding Path=Message}"></Button>
+        <Button Grid.Column="0" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonAskToTakeCase_Click" Margin="5,5,5,5" Content="{Binding Path=DisplayMessage}"></Button>
         <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonClose_Click" Margin="5,5,5,5">Close</Button>
 
     </Grid>
