--- a/YellowstonePathology/UI/AppMessaging/LockRequestReceivedPage.xaml
+++ b/YellowstonePathology/UI/AppMessaging/LockRequestReceivedPage.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.AppMessaging.LockRequestReceivedPage"
+﻿<UI:PageControl x:Class="YellowstonePathology.UI.AppMessaging.LockRequestReceivedPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:UI="clr-namespace:YellowstonePathology.UI">
 	<Grid Margin="10,10,10,10">
         
         <Grid.ColumnDefinitions>
@@ -19,8 +20,7 @@
         <TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding Path=DisplayMessage}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2,2,2,2"></TextBlock>
         <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonRespondTakeIt_Click" Margin="2,2,2,2">Go ahead and take it</Button>
         <Button Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonRespondHoldYourHorses_Click" Margin="2,2,2,2">Hold your horses</Button>
-        <Button Grid.Column="0" Grid.Row="3"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonClose_Click" Margin="2,2,2,2">Close</Button>
         <TextBlock Grid.Column="0" Grid.Row="4" Text="{Binding Path=CountDownMessage}" Foreground="Red" FontSize="20" Margin="2,2,2,2"></TextBlock>
         
     </Grid>
-</UserControl>
+</UI:PageControl>
