--- a/YellowstonePathology/UI/AppMessaging/LockRequestSentPage.xaml
+++ b/YellowstonePathology/UI/AppMessaging/LockRequestSentPage.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.AppMessaging.LockRequestSentPage"
+﻿<UI:PageControl x:Class="YellowstonePathology.UI.AppMessaging.LockRequestSentPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:UI="clr-namespace:YellowstonePathology.UI">
     <Grid Margin="10,10,10,10">
 
         <Grid.ColumnDefinitions>
@@ -16,8 +17,8 @@
 
         <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Path=DisplayMessage}" FontSize="16"></TextBlock>
         <Button Name="ButtonClose" Grid.Column="0" Grid.Row="1" Width="200" Height="100" Click="ButtonClose_Click" HorizontalAlignment="Right" Visibility="Collapsed">Close</Button>
-        <Button Name="ButtonNext" Grid.Column="0" Grid.Row="1" Width="200" Height="100" Click="ButtonNext_Click" HorizontalAlignment="Right" Visibility="Collapsed">Next</Button>
+        <Button Name="ButtonNevermind" Grid.Column="0" Grid.Row="1" Width="200" Height="100" Click="ButtonNevermind_Click" HorizontalAlignment="Right" Visibility="Collapsed">Nevermind</Button>
         <TextBlock Grid.Column="0" Grid.Row="2" Text="{Binding Path=CountDownMessage}" Foreground="Red" FontSize="24" Margin="30"></TextBlock>
 
     </Grid>
-</UserControl>
+</UI:PageControl>
